{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 104,
  "lineage": "7fd53b1c-dabf-810e-602c-407ec12a4383",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:401780762702:instance/i-09b09167029ec9231",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b09167029ec9231",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Shell",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d854788de21165a",
            "private_dns": "ip-10-1-1-223.ec2.internal",
            "private_ip": "10.1.1.223",
            "public_dns": "ec2-35-174-174-245.compute-1.amazonaws.com",
            "public_ip": "35.174.174.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02d17b1cccafd2eeb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae8efb5db7136141",
            "tags": {
              "Env": "Dev",
              "Name": "Docker-node01",
              "Owner": "Phani"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065db507e719668f8"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:401780762702:instance/i-0bb8765765ce5df43",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb8765765ce5df43",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Shell",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05c210bf363034a11",
            "private_dns": "ip-10-1-1-48.ec2.internal",
            "private_ip": "10.1.1.48",
            "public_dns": "ec2-34-207-69-207.compute-1.amazonaws.com",
            "public_ip": "34.207.69.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02f2d40f1f3b7fc16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae8efb5db7136141",
            "tags": {
              "Env": "Dev",
              "Name": "Docker-node02",
              "Owner": "Phani"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065db507e719668f8"
            ]
          },
          "dependencies": [
            "aws_instance.web-1",
            "aws_security_group.allow_all",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:401780762702:instance/i-0db4d81c2a4ca8ff0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db4d81c2a4ca8ff0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Shell",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a25d845841a1765c",
            "private_dns": "ip-10-1-1-57.ec2.internal",
            "private_ip": "10.1.1.57",
            "public_dns": "ec2-184-72-169-185.compute-1.amazonaws.com",
            "public_ip": "184.72.169.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d6caf27c3a33b220",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae8efb5db7136141",
            "tags": {
              "Env": "Dev",
              "Name": "Docker-node03",
              "Owner": "Phani"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065db507e719668f8"
            ]
          },
          "dependencies": [
            "aws_instance.web-1",
            "aws_security_group.allow_all",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401780762702:internet-gateway/igw-001972b9d2234a65c",
            "id": "igw-001972b9d2234a65c",
            "owner_id": "401780762702",
            "tags": {
              "Name": "docker-aws-igw"
            },
            "vpc_id": "vpc-0b77de6a6843934af"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06fbe7327e99304e1",
            "owner_id": "401780762702",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001972b9d2234a65c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "vpc_id": "vpc-0b77de6a6843934af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0170f18106b85d34b",
            "route_table_id": "rtb-06fbe7327e99304e1",
            "subnet_id": "subnet-0ae8efb5db7136141"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401780762702:security-group/sg-065db507e719668f8",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065db507e719668f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "401780762702",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b77de6a6843934af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401780762702:subnet/subnet-0ae8efb5db7136141",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0ae8efb5db7136141",
            "map_public_ip_on_launch": false,
            "owner_id": "401780762702",
            "tags": {
              "Name": "Terraform_Public_Subnet1-testing"
            },
            "vpc_id": "vpc-0b77de6a6843934af"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401780762702:subnet/subnet-093ea11994e8578e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-093ea11994e8578e3",
            "map_public_ip_on_launch": false,
            "owner_id": "401780762702",
            "tags": {
              "Name": "Terraform_Public_Subnet2-testing"
            },
            "vpc_id": "vpc-0b77de6a6843934af"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401780762702:subnet/subnet-0de0acb4936e32bf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0de0acb4936e32bf5",
            "map_public_ip_on_launch": false,
            "owner_id": "401780762702",
            "tags": {
              "Name": "Terraform_Public_Subnet3-testing"
            },
            "vpc_id": "vpc-0b77de6a6843934af"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401780762702:vpc/vpc-0b77de6a6843934af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f486383a0ac0a337",
            "default_route_table_id": "rtb-0d5e23634a7cca21f",
            "default_security_group_id": "sg-038e6c0a86cefd41c",
            "dhcp_options_id": "dopt-09b38699022eabab5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b77de6a6843934af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d5e23634a7cca21f",
            "owner_id": "401780762702",
            "tags": {
              "Name": "docker-aws-testing",
              "Owner": "Phani",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}